# OSRS-Damage-and-Gear-Calc

./: CMakeLists.txt  Makefile  Makefile.emscripten  battle.cpp  battle.h  bosses_complete.json  build_web.sh  debug_output.txt  fetch_item_data.py  gearcalc.md  inspect_attributes.py  item.cpp  item.h  latest_prices.json  main  main.cpp  monster  monster.cpp  monster.h  osrs_dps_calculator_implementation_plan_bdcaee44.plan.md  osrscalc  output_2.txt  output_debug.txt  output_duo.txt  output_filtered.txt  output_final.txt  output_full.txt  output_speed.txt  player  player.cpp  player.h  test_bolt_dps  test_special  upgrade_advisor.cpp  upgrade_advisor.h  wasm_bindings.cpp  wikisync.cpp  wikisync_data.json
data/: monsters-nodrops.json  wikisync_data.json
include/: battle.h  item.h  player.h  upgrade_advisor.h
item.dSYM/Contents/Resources/Relocations/aarch64/: item.yml
json.dSYM/Contents/Resources/Relocations/aarch64/: json.yml
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
monster.dSYM/Contents/Resources/DWARF/: monster
monster.dSYM/Contents/Resources/Relocations/aarch64/: monster.yml
player.dSYM/Contents/Resources/DWARF/: player
scripts/: test_wikisync.py
src/: battle.cpp  item.cpp  main.cpp  player.cpp  upgrade_advisor.cpp  wasm_bindings.cpp
test/: test_special_weapons.cpp
tests/: test_special_weapons.cpp
web/: README.md  index.html  osrs_calc.js  osrs_calc.wasm
web/css/: style.css
web/data/: latest_prices.json
web/js/: app.js
(+1 files in other folders)
